--- a/index.html
+++ b/index.html
@@ -4,7 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <style>
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+      }
+      .assign {
+        text-align: center;
+        padding-top: 20px;
+      }
+      .assign input {
+        padding: 10px;
+        width: 300px;
+        border: 1px solid #ddd;
+      }
+      .assign input:focus {
+        outline: none;
+        border-color: #ccc;
+      }
+      .assign [title="Current"] {
+        padding: 20px;
+        margin: 10px auto;
+        width: 610px;
+        background-color: #f1f0f0;
+      }
+      .assign .classes-list {
+        padding: 20px;
+        margin: 10px auto;
+        width: 610px;
+        background-color: #f1f0f0;
+      }
+      .assign .classes-list h5 {
+        margin: 0 0 10px;
+        text-align: left;
+      }
+      .assign .classes-list div span {
+        background-color: #ff5722;
+        padding: 6px 10px 8px;
+        margin-right: 5px;
+        border-radius: 6px;
+        color: white;
+        display: inline-flex;
+      }
+    </style>
 </head>
 <body>
     <!-- <div id="elzero" class="element" name="js">JavaScript</div> -->
@@ -50,7 +91,7 @@
 <img decoding="async" src="#" alt="Three" />
 <img decoding="async" src="#" />
 <img decoding="async" src="#" /> -->
-<form action="">
+<!-- <form action="">
   <input type="number" name="elements" class="input" placeholder="Number Of Elements" />
   <input type="text" name="texts" class="input" placeholder="Elements Text" />
   <select name="type" class="input">
@@ -59,7 +100,22 @@
   </select>
   <input type="submit" name="create" value="Create" />
   <div class="results"></div>
-</form>
-    <script src="week12.js"></script>
+</form> -->
+
+<!-- <a class="open" href="https://google.com">Google</a>
+    <a class="open" href="https://elzero.org">Elzero</a>
+    <a class="not" href="https://facebook.com">Facebook</a>
+    <a class="linked" href="https://linkedin.com">Elzero</a>
+ -->
+     <div class="assign">
+      <input type="text" class="classes-to-add" placeholder="Add Classes" />
+      <input type="text" class="classes-to-remove" placeholder="Remove Classes" />
+      <div class="element current" title="Current">Current Element</div>
+      <div class="classes-list">
+        <h5>Current Element Class Lists</h5>
+        <div></div>
+      </div>
+    </div>
+    <script src="week13.js"></script>
 </body>
 </html>
