--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
+   <!--  <style>
       body {
         font-family: Arial, Helvetica, sans-serif;
       }
@@ -44,6 +44,31 @@
         border-radius: 6px;
         color: white;
         display: inline-flex;
+      }
+    </style> -->
+    <style>
+      .close-butt{
+        background-color: red;
+        color: white;
+        border: 0;
+        
+        width: 30px;
+        height: 30px;
+      
+        border-radius: 50%;
+        text-align: center;
+        position: absolute;
+
+        top:-10px;
+        right: -10px;
+      }
+      .pop-up{
+        background-color: #EEE;
+        text-align: center;
+        padding: 10px;
+        width: 300px;
+        margin: 30px auto;
+        position: relative;
       }
     </style>
 </head>
@@ -107,7 +132,7 @@
     <a class="not" href="https://facebook.com">Facebook</a>
     <a class="linked" href="https://linkedin.com">Elzero</a>
  -->
-     <div class="assign">
+    <!--  <div class="assign">
       <input type="text" class="classes-to-add" placeholder="Add Classes" />
       <input type="text" class="classes-to-remove" placeholder="Remove Classes" />
       <div class="element current" title="Current">Current Element</div>
@@ -115,7 +140,12 @@
         <h5>Current Element Class Lists</h5>
         <div></div>
       </div>
+    </div> -->
+    <div class="pop-up">
+      <button class="close-butt">x</button>
+        <h2>Welcome</h2>
+        <p>Welcom To Elzero Web School</p>
     </div>
-    <script src="week13.js"></script>
+    <script src="week14.js"></script>
 </body>
 </html>
