--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
+   <!--  <style>
       body {
         font-family: Arial, Helvetica, sans-serif;
       }
@@ -45,7 +45,7 @@
         color: white;
         display: inline-flex;
       }
-    </style>
+    </style> -->
 </head>
 <body>
     <!-- <div id="elzero" class="element" name="js">JavaScript</div> -->
@@ -107,7 +107,7 @@
     <a class="not" href="https://facebook.com">Facebook</a>
     <a class="linked" href="https://linkedin.com">Elzero</a>
  -->
-     <div class="assign">
+    <!--  <div class="assign">
       <input type="text" class="classes-to-add" placeholder="Add Classes" />
       <input type="text" class="classes-to-remove" placeholder="Remove Classes" />
       <div class="element current" title="Current">Current Element</div>
@@ -115,7 +115,21 @@
         <h5>Current Element Class Lists</h5>
         <div></div>
       </div>
-    </div>
+    </div> -->
+<!--     <div class="our-element">Our Element</div>
+<p>Paragraph</p> -->
+<!-- <div>
+  <span>Hello</span>
+  
+  Elzero
+</div> -->
+
+<div>Element</div>
+<span>Element</span>
+<p>Element</p>
+<article>Element</article>
+<section>Element</section>
+
     <script src="week13.js"></script>
 </body>
 </html>
