--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo&family=Open+Sans&family=Roboto&display=swap" rel="stylesheet">
     <style>
    /*    .pop-up{
         background-color: #EEE;
@@ -180,14 +181,46 @@
         <p>Welcom To Elzero Web School</p>
     </div> -->
     <!-- <div id="ten">10</div> -->
-     <div class="container">
+   <!--   <div class="container">
       <div class="form">
         <input type="text" class="input">
         <input type="submit" class="add" value="Add Task">
 
       </div>
       <div class="tasks"></div>
-     </div>
+     </div> -->
+
+     <select name="" id="fonts">
+      <option value="Open Sans">Open Sans</option>
+      <option value="Cairo">cairo</option>
+      <option value="Roboto">roboto</option>
+     </select>
+     <select name="" id="colors">
+      <option value="red">red</option>
+      <option value="blue">blue</option>
+      <option value="green">green</option>
+      <option value="yellow">yellow</option>
+      <option value="orangered">orangered</option>
+      <option value="orange">orange</option>
+     </select>
+     <select name="" id="sizes">
+      <option value="15px">small</option>
+      <option value="20px">mid</option>
+      <option value="30px">large</option>
+     </select>
+hellow world
+   <!--   <form action="">
+      <input type="text" class="first">
+      <input type="text" class="second">
+      <input type="text" class="third">
+      <select name="" id="selection">
+        <option value="one">first</option>
+        <option value="two">second</option>
+        <option value="three">third</option>
+        <option value="four">fourth</option>
+        <option value="five">fifth</option>
+      </select>
+     </form> -->
     <script src="week14.js"></script>
 </body>
 </html>
