--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       </div>
       <div class="tasks"></div>
      </div> -->
-
+<!-- 
      <select name="" id="fonts">
       <option value="Open Sans">Open Sans</option>
       <option value="Cairo">cairo</option>
@@ -208,7 +208,7 @@
       <option value="20px">mid</option>
       <option value="30px">large</option>
      </select>
-hellow world
+hellow world -->
    <!--   <form action="">
       <input type="text" class="first">
       <input type="text" class="second">
@@ -221,6 +221,6 @@ hellow world
         <option value="five">fifth</option>
       </select>
      </form> -->
-    <script src="week14.js"></script>
+    <script src="week17.js"></script>
 </body>
 </html>
